--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "goHire-android2-backend",
+  "name": "starworks",
   "version": "1.0.0",
-  "description": "GoHire Android App",
+  "description": "StarworkS Android App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
